# IADT_Agents

./: .gitignore  Cargo.toml  README.md  progress_report.md
.cargo/: config.toml
auto-repair-shop/: config.json  contract.json
auto-repair-shop/personas/: attendant.json  mechanic.json  owner.json
auto-repair-shop/scenarios/: cost-objection.json  diagnostic-challenge.json  lost-history-conflict.json  parts-delay.json
auto-repair-shop/tests/: attendant-tests.json  mechanic-tests.json  owner-tests.json
auto-repair-shop/world-model/: business-flows.json  constraints.json  problems.json  rules.json
context-repository/: Cargo.toml
context-repository/src/: contract.rs  lib.rs  loader.rs  validation.rs
context-repository/src/models/: mod.rs  persona.rs  quality.rs  scenario.rs  session.rs  world_model.rs
context-repository/src/tests/: integration_tests.rs
system-repository/: Cargo.toml
system-repository/proptest-regressions/: property_tests.txt
system-repository/src/: lib.rs  main.rs  property_tests.rs
system-repository/src/cli/: app.rs  commands.rs  engine.rs  mod.rs  theme.rs  tui.rs
system-repository/src/config/: mod.rs
system-repository/src/consultation/: mod.rs
system-repository/src/meeting/: mod.rs
system-repository/src/ollama/: mod.rs
system-repository/src/persona/: mod.rs
system-repository/src/prompt/: mod.rs
system-repository/src/quality/: collector.rs  consistency.rs  fidelity.rs  hallucination.rs  mod.rs
system-repository/src/session/: mod.rs
