[package]
name = "context-repository"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Domain Expert CLI System - Context Contract and Domain Models"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
jsonschema = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tempfile = "3"
