[package]
name = "system-repository"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Domain Expert CLI System - Engine (System Repository)"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
jsonschema = { workspace = true }
async-trait = { workspace = true }
regex = { workspace = true }
tokio-stream = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
tui-input = { workspace = true }

# Internal dependency
context-repository = { path = "../context-repository" }

[dev-dependencies]
proptest = { workspace = true }
tempfile = "3"
mockall = "0.13"
tokio-test = "0.4"
